After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752137 - nmcli segfaults on connect up (because of pin?)
nmcli segfaults on connect up (because of pin?)
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: nmcli
git master
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-07-08 18:49 UTC by Andrea Scarpino
Modified: 2015-07-10 10:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Andrea Scarpino 2015-07-08 18:49:01 UTC
Got a segfault when running `nmcli con up id Connection`:

  • #0 __strcmp_sse2_unaligned
    from /usr/lib/libc.so.6
  • #1 strv_has
    at ./../common/nm-secret-agent-simple.c line 128
  • #2 request_secrets_from_ui
    at ./../common/nm-secret-agent-simple.c line 365
  • #3 impl_secret_agent_old_get_secrets
    at nm-secret-agent-old.c line 340
  • #4 ffi_call_unix64
    from /usr/lib/libffi.so.6
  • #5 ffi_call
    from /usr/lib/libffi.so.6
  • #6 g_cclosure_marshal_generic
    from /usr/lib/libgobject-2.0.so.0
  • #7 _nm_dbus_method_meta_marshal
    at nm-dbus-helpers.c line 379
  • #8 g_closure_invoke
    from /usr/lib/libgobject-2.0.so.0
  • #9 ??
    from /usr/lib/libgobject-2.0.so.0
  • #10 g_signal_emitv
    from /usr/lib/libgobject-2.0.so.0
  • #11 _nmdbus_secret_agent_skeleton_handle_method_call
    at nmdbus-secret-agent.c line 1595
  • #12 ??
    from /usr/lib/libgio-2.0.so.0
  • #13 ??
    from /usr/lib/libgio-2.0.so.0
  • #14 g_main_context_dispatch
    from /usr/lib/libglib-2.0.so.0
  • #15 ??
    from /usr/lib/libglib-2.0.so.0
  • #16 g_main_loop_run
    from /usr/lib/libglib-2.0.so.0
  • #17 main
    at nmcli.c line 630

I'm trying to connect to a GSM network and my PIN is disabled.
Comment 1 Jiri Klimes 2015-07-10 10:47:22 UTC
Thanks for reporting.

Fixed:
master: 55c3f70 clients: fix bad array loop in nm-secret-agent-simple.c:strv_has (bgo #752137)
nm-1-0: 86f1645 clients: fix bad array loop in nm-secret-agent-simple.c:strv_has (bgo #752137)