clients: fix bad array loop in nm-secret-agent-simple.c:strv_has (bgo #752137)

https://bugzilla.gnome.org/show_bug.cgi?id=752137

(cherry picked from commit 55c3f70ec8cc206b6f176e64864a47fbef2a7451)